Basic body tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello, Github Pages.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nigel Hayes</title>
+</head>
+<body>
+    Hello, Github Pages.
+</body>
+</html>
+
+
+
